@@ -1,0 +1,1 @@
+int obsd_mkstemp (char *template_name);
