@@ -1,4 +1,5 @@
-OpenVi 7.0.1 -> OpenVi 7.0.2 (Unreleased): Tue Jan 25 11:36:27 2022
+OpenVi 7.0.1 -> OpenVi 7.0.2 (Unreleased): Tue Jan 25 12:06:39 2022
+	+ Add OpenBSD-compatible mkstemp function allowing for longer file names
 	+ Silence some potential warnings with explicit casting
 	+ Exit with error when screen is too small for visual mode
 	+ Apply Debian patch to fix backwards sentence moving
@@ -8,7 +9,7 @@ OpenVi 7.0.1 -> OpenVi 7.0.2 (Unreleased): Tue Jan 25 11:36:27 2022
 	+ Update .gitignore to include patch/diff detritus; no binary change.
 	+ Adjust calculation to avoid "BDB0511 page sizes must be a power-of-2"
 	  warning; BDB 1.85 only cared if oage size was even; closes GH issue #3
-	+ Apply .exrc writability patch from hesso at pool.math.tu-berlin.de
+	+ Apply .exrc writeability patch from hesso at pool.math.tu-berlin.de
 	+ If TERM is unset, set to null, or otherwise unknown, first attempt
 	  to fallback to "vt100"; exit with a fatal error if "vt100" fails.
 	+ Disallow pattern spaces which would cause intermediate
